--- a/front/src/app/components/post/post-list/post-list.html
+++ b/front/src/app/components/post/post-list/post-list.html
@@ -56,18 +56,20 @@
         <div formGroupName="game">
             <div class="mdl-selectfield">
                 <label for="queryGameType"></label>l
-                <md-select class="form-control" id="queryGameType" formControlName="gameMode" required>
+                <md-select class="form-control" id="queryGameType" formControlName="gameMode" (change)="onChangeSelect($event)" required>
                     <md-option value="">Please Select...</md-option>
                     <md-option *ngFor="let gameType of queryGameTypes" [value]="gameType">{{gameType}}</md-option>
                 </md-select>
             </div>
+            {{currentGameMode}}
             Game level you want to play.
             <div class="mdl-selectfield">
-                <label for="queryGameLevel"></label>
-                <md-select class="form-control" id="queryGameLevel" formControlName="gameLevel" required>
-                    <md-option value="">Please Select...</md-option>
-                    <md-option *ngFor="let gameLevel of queryGameLevels | async" [value]="gameLevel">{{gameLevel}}</md-option>
-                </md-select>
+                <!--<label for="queryGameLevel"></label>-->
+
+                <!--<md-select class="form-control" id="queryGameLevel" formControlName="gameLevel" required>-->
+                    <!--<md-option value="">Please Select...</md-option>-->
+                    <!--<md-option *ngFor="let gameLevel of currentGameMode.gameMode.gameMode.options.value" [value]="gameLevel">{{gameLevel}}</md-option>-->
+                <!--</md-select>-->
             </div>
         </div>
         Player types you are looking for.
