ReplaySubject work for auto refresh of data.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="app">
   <h1>
-    Welcome to {{title}}!
+    W
+    <!--Welcome to {{title}}!-->
   </h1>
 </div>
 <router-outlet></router-outlet>
