--- a/front/src/app/components/post/components/post-search/post-search.html
+++ b/front/src/app/components/post/components/post-search/post-search.html
@@ -85,8 +85,8 @@
         <div formArrayName="playerCharacters">
             <div *ngFor="let character of characters.controls; let i = index;" [formGroupName]="i">
                 <div>
-                    <md-checkbox type="checkbox" formControlName="selected">
-                       {{character.value.type}}
+                    <md-checkbox type="checkbox" formControlName="selected" (change)="addCharacters(character.value.type)">
+                       {{character.value.type | titlecase}}
                      </md-checkbox>
                 </div>
             </div>
